force-app/main/default/objects/Reward__c/fields/Customer_Master__c.field-meta.xml
<CustomField>
    <fullName>Customer_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Master</label>
    <referenceTo>Customer_Master__c</referenceTo>
    <relationshipLabel>Rewards</relationshipLabel>
    <relationshipName>Rewards</relationshipName>
    <type>Lookup</type>
</CustomField>