force-app/main/default/objects/Reward__c/fields/Reward_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Reward_Criteria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reward Criteria</label>
    <referenceTo>Reward_Criteria__c</referenceTo>
    <relationshipLabel>Rewards</relationshipLabel>
    <relationshipName>Rewards</relationshipName>
    <type>Lookup</type>
</CustomField>