force-app/main/default/objects/Reward__c/fields/Reward_Type__c.field-meta.xml
<CustomField>
    <fullName>Reward_Type__c</fullName>
    <label>Reward Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>